--- a/_posts/2018-10-06-crawling.md
+++ b/_posts/2018-10-06-crawling.md
@@ -6,7 +6,7 @@ date:   2018-10-06
 categories: javascript
 cover:  "/assets/instacode.png"
 ---
-**크롤링(crawling) 이란?**
+## 크롤링(crawling) 이란?
 
 Web Scraping이라고도 하며 웹사이트의 정보를 긁어모아서 Data Base화 시키는 행위를 의미 한다. 이러한 방식을 통해 구글, 네이버 등 여러 사이트의 정보를 수집한다고 생각하면 된다.
 
