--- a/_posts/2018-10-06-crawling.md
+++ b/_posts/2018-10-06-crawling.md
@@ -5,6 +5,7 @@ author: Alex
 date:   2018-10-06
 categories: javascript
 cover:  "/assets/instacode.png"
+comments: true
 ---
 ## 크롤링(crawling) 이란?
 
