disqus 시스템 축다

--- a/_posts/2018-10-5-실전정규표현식.md
+++ b/_posts/2018-10-5-실전정규표현식.md
@@ -3,7 +3,7 @@ layout: post
 title: "Javasript RegExp"
 author: Alex
 date: 2018-10-05
-categories: javascript
+categories: Javascript
 cover:  "/assets/regexp.png"
 comments: true
 ---
