--- a/_posts/2018-10-5-regexp.md
+++ b/_posts/2018-10-5-regexp.md
@@ -4,6 +4,7 @@ title: "Javascript RegExp"
 author: Alex
 date: 2018-10-05
 categories: Javascript
+permalink: /category/
 cover:  "/assets/regexp.png"
 comments: true
 ---
