--- a/_posts/2018-10-06-crawling.md
+++ b/_posts/2018-10-06-crawling.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Javascript Crawling"
 author: Alex
 date:   2018-10-06
+permalink: /category/
 categories: Javascript
 cover:  "/assets/instacode.png"
 comments: true
