--- a/_posts/2018-10-06-crawling.md
+++ b/_posts/2018-10-06-crawling.md
@@ -3,8 +3,7 @@ layout: post
 title:  "Javascript Crawling"
 author: Alex
 date:   2018-10-06
-permalink: /category/
-categories: Javascript
+categories: javascript
 cover:  "/assets/instacode.png"
 comments: true
 ---
