--- a/_posts/2018-10-5-regexp.md
+++ b/_posts/2018-10-5-regexp.md
@@ -3,8 +3,7 @@ layout: post
 title: "Javascript RegExp"
 author: Alex
 date: 2018-10-05
-categories: Javascript
-permalink: /category/
+categories: javascript
 cover:  "/assets/regexp.png"
 comments: true
 ---
