V8 post의 url 변경

--- a/_posts/2018-10-12-V8.md
+++ b/_posts/2018-10-12-V8.md
@@ -10,13 +10,14 @@ comments: true
 ## [번역] How the V8 engine works?
 
 <http://thibaultlaurens.github.io/javascript/2013/04/29/how-the-v8-engine-works/>
+
 구글의 V8엔진이 어떻게 동작하지는 알아보기위해 위 내용을 번역하기로 했다.
 
 ### V8엔진은 어떻게 동작하는가?
 
 V8엔진은 독일 구글 개발 센터에서 만들어진 javascript엔진이다. 이것은 오픈소스이며, c++을 통해 개발 되었다. 클라이언트(Google Chrome), 서버(node.js)에서 모두 사용되는 Javascript 어플리케이션이다.
 
-V8엔진은 웹브라우저안에서 자바스크립트의 실행성능을 높이기 위해 디자인되었다. 속도를 얻기위해서, V8은 interpreter를 사용하는 대신 javascript 코드를 효율적인 machine 코드로 변환한다. SpiderMonkey 또는 Rhino (Mozilla)와 같은 최신 javascript 엔진 처럼 **[JIT(Just-In-Time)][https://ko.wikipedia.org/wiki/JIT_%EC%BB%B4%ED%8C%8C%EC%9D%BC]** compiler를 구현하여 javascript 코드를 실행시 컴파일하여 machine 코드로 변환한다. V8의 가장 큰 차이는 byte code 또는 어떤 [intermediate code][ https://www.tutorialspoint.com/compiler_design/compiler_design_intermediate_code_generations.htm]를 생성하지 않는다.
+V8엔진은 웹브라우저안에서 자바스크립트의 실행성능을 높이기 위해 디자인되었다. 속도를 얻기위해서, V8은 interpreter를 사용하는 대신 javascript 코드를 효율적인 machine 코드로 변환한다. SpiderMonkey 또는 Rhino (Mozilla)와 같은 최신 javascript 엔진 처럼 **[JIT(Just-In-Time)](https://ko.wikipedia.org/wiki/JIT_%EC%BB%B4%ED%8C%8C%EC%9D%BC)** compiler를 구현하여 javascript 코드를 실행시 컴파일하여 machine 코드로 변환한다. V8의 가장 큰 차이는 byte code 또는 어떤 [intermediate code](https://www.tutorialspoint.com/compiler_design/compiler_design_intermediate_code_generations.htm)를 생성하지 않는다.
 
 이 글에서 중점적으로 봐야하는 것은 **V8엔진이 클라이언트, 서버단에서 최적화된 코드를 생성하기 위해 어떻게 동작하고 있는지 이해**하는 것이다. 만약 당신이 "내가 javascript의 성능에 관심을 가져야 하나요?"라고 묻는다면, 나는 Daniel Clifford (V8팀의 기술 책임자 겸 관리자)의 말을 인용하여 대답 할 것이다.
 
@@ -84,6 +85,6 @@ V8은 두개의 컴파일러를 가지고 있다.
 - 런타임(runtime): <http://asfirstalways.tistory.com/99>
 - 컴파일: <http://karfn84.tistory.com/entry/%EC%BB%B4%ED%93%A8%ED%84%B0-%EC%9D%BC%EB%B0%98-%EC%BB%B4%ED%8C%8C%EC%9D%BC%EC%9D%B4%EB%9E%80>
 - <https://www.html5rocks.com/ko/tutorials/speed/v8/>
-- Google I/O 2012 “Breaking the JavaScript Speed Limit with V8” with Daniel Clifford, tech lead and manager of the V8 team: [video][https://www.youtube.com/watch?v=UJPdhx5zTaw] and [slides][http://v8-io12.appspot.com/].
-- V8: an open source JavaScript engine: [video][http://www.youtube.com/watch?v=hWhMKalEicY] of Lars Bak, V8 core engineer.
-- Nikkei Electronics Asia blog post: [Why Is the New Google V8 Engine So Fast?][http://techon.nikkeibp.co.jp/article/HONSHI/20090106/163615/]
+- Google I/O 2012 “Breaking the JavaScript Speed Limit with V8” with Daniel Clifford, tech lead and manager of the V8 team: [video](https://www.youtube.com/watch?v=UJPdhx5zTaw) and [slides](http://v8-io12.appspot.com/).
+- V8: an open source JavaScript engine: [video](http://www.youtube.com/watch?v=hWhMKalEicY) of Lars Bak, V8 core engineer.
+- Nikkei Electronics Asia blog post: [Why Is the New Google V8 Engine So Fast?](http://techon.nikkeibp.co.jp/article/HONSHI/20090106/163615/)
