크롭 v8 이미지 추가

--- a/_posts/2018-10-12-V8.md
+++ b/_posts/2018-10-12-V8.md
@@ -4,7 +4,7 @@ title:  "V8 Engine"
 date:   2018-10-12
 author: Alex
 categories: javascript web
-cover:
+cover: "/assets/chrome-v8.png"
 comments: true
 ---
 ## [번역] How the V8 engine works?
