--- a/_posts/2018-10-12-V8.md
+++ b/_posts/2018-10-12-V8.md
@@ -52,7 +52,7 @@ V8은 각각의 property마다 새로운 hidden class를 생성하기 떄문에 
 
 <hr />
 
-### V8의 javascript 코드 최적화 예제들**
+### V8의 javascript 코드 최적화 예제들
 
 #### Tagged values
 numbers와 javascript object를 효과적으로 표현하기위해서 V8은 두가지 모두 32bit 값으로 나타낸다. V8은 object(flag: 1)인지 integer(flag: 0) 알기위해서 `SMall Integer` 또는 **SMI**로 불리는 하나의 비트를 사용하고 이 때문에 값은 31bits이다. 이때, numeric value가 31bits 보다 크면 V8은 숫자를 감싸서 double로 만들고 이 숫자를 넣을 새로운 object를 생성한다.
