--- a/_posts/2018-11-22-this.md
+++ b/_posts/2018-11-22-this.md
@@ -4,7 +4,7 @@ title: "Javascript this"
 author: Alex
 date: 2018-11-22
 categories: javascript
-cover:  "/assets/regexp.png"
+cover:  "/assets/instacode.png"
 comments: true
 ---
 ## this
@@ -180,7 +180,7 @@ true
 
 this는 global을 바라보고 있다. 하지만, strict mode를 적용하면 this는 undefined가 된다.
 
-### 참고
-- https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/this
-- http://resoneit.blogspot.kr/2014/01/this.html
-- http://poiemaweb.com/js-this
+### 참조
+- <https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/this>
+- <http://resoneit.blogspot.kr/2014/01/this.html>
+- <http://poiemaweb.com/js-this>
