--- a/_posts/2018-12-03-react-css.md
+++ b/_posts/2018-12-03-react-css.md
@@ -3,7 +3,7 @@ layout: post
 title: "React CSS"
 author: Alex
 date: 2018-12-03
-categories: javascript
+categories: react css javascript
 cover:  "/assets/instacode.png"
 comments: true
 ---
