--- a/_posts/2019-01-07-chapter2.md
+++ b/_posts/2019-01-07-chapter2.md
@@ -32,12 +32,10 @@ comments: true
 ~~~
 
 2. 이름(Names)
-
-하나의 문자나 하나 이상의 문자, 숫자, _ 로 이루어진 문자열로 statement, variable, parameter, operator 등에 사용한다. 하지만 예약어(언어상에서 이미 정해놓은 의미있는 단어들)는 이름으로 사용할 수 없다.
+    하나의 문자나 하나 이상의 문자, 숫자, _ 로 이루어진 문자열로 statement, variable, parameter, operator 등에 사용한다. 하지만 예약어(언어상에서 이미 정해놓은 의미있는 단어들)는 이름으로 사용할 수 없다.
 
 3. 숫자(Numbers)
-
-자바스크립트의 숫자형을 하나만 존재
+    자바스크립트의 숫자형을 하나만 존재
 
 - 64비트 부동소수점 형식 (자바의 double형 만 존재)
 - 정수와 실수의 구분이 없으므로 숫자형에서 발생하는 모든 오류 대부분을 줄일수 있다. (short 형을 사용하고 overflow가 발생)
@@ -56,8 +54,7 @@ comments: true
 ~~~
 
 4. 문자열(String)
-
-작은 따옴표(' ')나 큰따옴표(" ")로 묶어서 나타낸다. 자바스크립트는 유니코드 16비트 문자 셋으로 이루어져있다.
+    작은 따옴표(' ')나 큰따옴표(" ")로 묶어서 나타낸다. 자바스크립트는 유니코드 16비트 문자 셋으로 이루어져있다.
 
 - 문자하나만 표현하는 타입이 따로 존재하지 않아 문자하나만 포함한 문자열을 사용.
 - escape string: `\` 를 붙여 원래의 의미에서 벗어나는 문자
@@ -69,8 +66,7 @@ comments: true
 ~~~
 
 5. 문장(Statement)
-
-어떤 동작을 수행하는데 가장 기본적인 요소. expression을 포함하고 있으며, 완결성있게 실행되는 최소한의 코드 단위
+    어떤 동작을 수행하는데 가장 기본적인 요소. expression을 포함하고 있으며, 완결성있게 실행되는 최소한의 코드 단위
 
 - <script>는 웹브라우저에서 즉시 실행되는 하나의 컴파일 단위.
 - linker가 존재하지 않지 때문에 javascript은 모든 statement는 공통적인 namespace에 넣어둠.
@@ -80,14 +76,12 @@ comments: true
 <https://github.com/DongHyunKims/javascript-notes/tree/master/notes/scope>
 
 6. 표현식(Expression)
-
-어떤 다른 값을 반환하는 값, 상수, 연산자, 변수, 함수.
+    어떤 다른 값을 반환하는 값, 상수, 연산자, 변수, 함수.
 
 - 리터럴 값, 변수, 내장값(true, false, null, undefined, NaN, Infinity 등), 이항연산자, 삼항연산자, 함수호출...
 
 7. 리터럴(Literals)
-
-변수 및 상수에 입력하는 변하지 않는 `데이터값` 그 자체.
+    변수 및 상수에 입력하는 변하지 않는 `데이터값` 그 자체.
 
 - 상수, 변수: 메모리에 할당된 공간, 리터럴: 해당 공간에 할당된 값
 - 데이터를 표현하는 방식 (expression): 속도의 향상, 가독성이 좋기 때문에 많이 사용한다.
@@ -100,5 +94,4 @@ comments: true
 **토론**
 
 - number type의 메모리를 어떻게 할당하는지? 남은 메모리를 어떻게 관리 하는지
-- 자바스크립트 gc가 어떻게 동작하는지?
-<https://engineering.huiseoul.com/자바스크립트는-어떻게-작동하는가-메모리-관리-4가지-흔한-메모리-누수-대처법-5b0d217d788d>
+- 자바스크립트 gc가 어떻게 동작하는지? <https://engineering.huiseoul.com/자바스크립트는-어떻게-작동하는가-메모리-관리-4가지-흔한-메모리-누수-대처법-5b0d217d788d>
