--- a/_posts/2019-01-07-chapter2.md
+++ b/_posts/2019-01-07-chapter2.md
@@ -38,7 +38,7 @@ const bar = 'test';
 
 ### 3. 숫자(Numbers)
 
-자바스크립트의 숫자형을 하나만 존재
+자바스크립트의 숫자형을 하나만 존재.
 - 64비트 부동소수점 형식 (자바의 double형 만 존재)
 - 정수와 실수의 구분이 없으므로 숫자형에서 발생하는 모든 오류 대부분을 줄일수 있다. (short 형을 사용하고 overflow가 발생)
 - NaN(Not a Number): 수치 연산을 해서 정상적이 값을 얻지 못하는 경우
@@ -69,8 +69,8 @@ console.log("A" === "\u0041");
 
 ### 5. 문장(Statement)
 
-어떤 동작을 수행하는데 가장 기본적인 요소. expression을 포함하고 있으며, 완결성있게 실행되는 최소한의 코드 단위
-- <script>는 웹브라우저에서 즉시 실행되는 하나의 컴파일 단위.
+어떤 동작을 수행하는데 가장 기본적인 요소. expression을 포함하고 있으며, 완결성있게 실행되는 최소한의 코드 단위.
+- `<script>`는 웹브라우저에서 즉시 실행되는 하나의 컴파일 단위.
 - linker가 존재하지 않지 때문에 javascript은 모든 statement는 공통적인 namespace에 넣어둠.
 - switch, while, if, for, do, return, break, throw...
 - block({}): statement에 집합, 새로운 scope을 생성하지 않음. javascript의 유효범위는 블록단위가 아닌 함수 단위로 정의k
