--- a/_posts/2018-10-06-crawling.md
+++ b/_posts/2018-10-06-crawling.md
@@ -13,7 +13,7 @@ Web Scraping이라고도 하며 웹사이트의 정보를 긁어모아서 Data B
 
 이번에 회사 프로젝트를 통해 웹 크롤링을 하게 되었다. 아직 프로젝트가 완성되지는 않았지만 웹 크롤링을 하면서 어려웠던 점을 정리하려고 한다.
 
-**사용 언어, 모듈**
+### 1. 사용 언어, 모듈
 
 언어는 자바스크립트, 모듈는 cheerio, request 라이브러리를 사용하여 웹 크롤링을 진행 하였다.
 
@@ -69,7 +69,7 @@ function crawling() {
 3. jQuery selector를 사용하여 HTML element에 접근
 4. 원하는 정보 추출
 
-**어려웠던점**
+### 2. 어려웠던점
 
 사실 프로젝트 수행시 다양한 변수가 존재해서 위 예제처럼 쉽게 데이터를 추출할 수 없었다.
 
@@ -94,7 +94,7 @@ function crawling() {
 	*예를 들어 여러개의 사이트에서 일관된 정보를 얻고 싶은데 각 사이트 마다 작성 방법이 달라 원하는 정보로  파싱하는것이 굉장히 까다로웠다. 이때 필요한 것이 정규 표현식이다. 정규표현식을 잘 알고 있다면 원하는 정보를 얻는데 아주 수월해 질 것이다. 정규표현식 에  대한 내용도 포스팅 하도록 하겠다.*
 
 
-**해결방법**
+### 3. 해결방법
 
 - 쿠키정보를 통해서 사이트 정보가 변경되는 경우 header에 해당 쿠키 정보를 추가해 콜을 보내면 해결된다.
 	{% highlight javascript %}
@@ -114,7 +114,7 @@ function test() {
 
 - HTML element가 뒤죽박죽인 경우 조건에 따라 다르게 파싱하는 방법을 사용했는데 javascript 모듈중 깨진 DOM을 정상적으로 변환해주는 모듈이 있다고 하여 사용해 볼 생각이다.
 
-**결론**
+### 4. 결론
 
 크롤링 작업시 기본적으로 필요하다고 생각하는 4가지가 있다.
 
@@ -126,9 +126,8 @@ function test() {
 물론 이외에도 더 많은 지식이 필요하겠지만 위 4가지에 대한 기본적 이해가 있다면 어렵지 않게 크롤링 작업을 할 수 있을 것이다.
 크롤링은 다양한 방법으로 가능하다. 스크립트를 실행시키거나 로그인후 데이터를 크롤링 해야 하는경우 js DOM, phantom js등 다른 모듈을 고려해 보는 것도 좋은 방법이다.
 
-**참조**
+### 5. 참조
 
 requset: <https://github.com/request/request>
 
 cheerio: <https://github.com/cheeriojs/cheerio>
-
