--- a/_posts/2018-10-19-css1.md
+++ b/_posts/2018-10-19-css1.md
@@ -7,7 +7,7 @@ categories: css problem
 cover:  "/assets/instacode.png"
 comments: true
 ---
-### 문제
+### 1. 문제
 
 자식 엘리먼트에 overflow: hidden, display: inline-block시 부모 엘리먼트에 높이가 적용되는 문제가 발생하였다.
 
@@ -33,8 +33,7 @@ comments: true
 
 <https://jsbin.com/sotuqet/edit?html,css>
 
-
-### 해결책
+### 2. 해결
 
 처음에는 부모 엘리먼트에 position: absolute를 적용하고 top: 5px정도 내리는 방법을 사용하였다. 하지만 다른 자식 엘리먼트에 스타일이 이상하게 적용되는 문제가 발생되어 다른 방법을 찾게 되었다.
 
@@ -44,13 +43,8 @@ vertical-align은 inline 엘리먼트와 inline-block 엘리먼트를 수직 정
 
 또한 inline-block에 적용된 overflow: hidden은 하단 꼭지가 text의 baseline에 정렬되도록 하기때문에 수직정렬을 통해 이 문제를 해결할수 있는 것이다.
 
-## 참조
+## 3. 참조
 
-line-height: <http://aboooks.tistory.com/171>
-
-stack overflow
-
-<https://stackoverflow.com/questions/20566710/overflowhidden-displayinline-block-moves-text-upwards/20566810#20566810>
-https://stackoverflow.com/questions/20310690/overflowhidden-on-inline-block-adds-height-to-parent
-
-
+- line-height: <http://aboooks.tistory.com/171>
+- <https://stackoverflow.com/questions/20566710/overflowhidden-displayinline-block-moves-text-upwards/20566810#20566810>
+- <https://stackoverflow.com/questions/20310690/overflowhidden-on-inline-block-adds-height-to-parent>
