block이 적용되지 않아 이텔릭체로 변경

--- a/_posts/2019-02-17-view-pdf.md
+++ b/_posts/2019-02-17-view-pdf.md
@@ -33,24 +33,24 @@ query string을 통해서도 다운로드가 무리없이 실행되었다.
 ### 3. 여러 시련과 해결시도
 
 #### 첫번째 시련
-- 2번 방식을 사용하여 desktop browser에서 다운로드하는 것을 쉽게 해결하였지만 현재 앱에서 사용하고 있는 [inappbrowser]를 통해 PDF를 preview할 방법을 찾는 것이 쉽지 않았다.
+- 2번 방식을 사용하여 desktop browser에서 다운로드하는 것을 쉽게 해결하였지만 현재 앱에서 사용하고 있는 inappbrowser를 통해 PDF를 preview할 방법을 찾는 것이 쉽지 않았다.
 
-> `Webview`는 각각의 OS에 내장된 웹 브라우저를 app에서 표현하게 해준다. 쉽게 말해 app안에 html iframe을 넣어놓은 것이다. Webview를 이용하여 웹페이지를 앱에서 호출하여 하이브리드 형태의 앱을 만들수 있다.
+_`Webview`는 각각의 OS에 내장된 웹 브라우저를 app에서 표현하게 해준다. 쉽게 말해 app안에 html iframe을 넣어놓은 것이다. Webview를 이용하여 웹페이지를 앱에서 호출하여 하이브리드 형태의 앱을 만들수 있다._
 
-> cordova의 inappbrowser 라는 플러그인이 있다. 이 플러그인은 앱 내부에서 여러가지 리소스(문서, 동영상..)을 표시해 주는 역할을 한다. 사용자가 앱을 종료하지 않고도 웹 페이지를 볼수 있게 도와주는 플러그인이다.
+_cordova의 [inappbrowser] 라는 플러그인이 있다. 이 플러그인은 앱 내부에서 여러가지 리소스(문서, 동영상..)을 표시해 주는 역할을 한다. 사용자가 앱을 종료하지 않고도 웹 페이지를 볼수 있게 도와주는 플러그인이다._
 
 #### 첫번째 해결시도
 
 - [Google Docs API]를 사용하여 해결하기로 했다. 하지만 chrome에서는 잘 동작하지만 어째서인지 safari등 다른 브라우저와 Webview를 [204 No cotent] 상태가 제공되는 에러가 있었다. 이 문제를 해결하기 위해 여러 개발자들이 [구글에 문의] 하였지만 아직까지 해결되지 않고 있었고, 용량이 큰(25MB) PDF 파일은 간헐적으로 로드를 실패하여 이 방법의 사용은 포기 하였다.
 - [PDFViewer component]를 만들어 로드를 실패할 때마다 재요청하는 방법을 사용해보려 했지만, 응답을 너무 오래 걸리는 문제가 있어 사용하지 않았다.
 
-> `https://docs.google.com/viewer`는 구글에서 제공하는 doc api 이다. 파라메터로는 `url: preview할 문서 주소`, `embedded: true 설정시 emmbedded mode interface 제공`를 사용한다. `emmbedded mode` 사용시 웹페이지의 주변정보가 집중되며, 사용자가 문서 탐색시 Google로 넘어가지 않는 이점이 있다.
+_`https://docs.google.com/viewer`는 구글에서 제공하는 doc api 이다. 파라메터로는 `url: preview할 문서 주소`, `embedded: true 설정시 emmbedded mode interface 제공`를 사용한다. `emmbedded mode` 사용시 웹페이지의 주변정보가 집중되며, 사용자가 문서 탐색시 Google로 넘어가지 않는 이점이 있다._
 
 **예제**
 
 <http://docs.google.com/viewer?url=http://geek-easy.com/wp-content/uploads/2012/01/TOP-15-ESSENTIAL-FREE-SOFTWARE.PDF&embedded=true>
 
-#### 두번쨰 시련
+#### 두번쩨 시련
 - 3번 방식을 사용하기 위해 task를 만들어 분양공고문이 존재하는 아파트의 DB를 변경하고, aws S3에 PDF를 저장해 두었다. 모바일 Webview에서 PDF를 보여주거나 다운로드 받는것을 쉽게 적용되었지만 아마존 CloudFront에 등록해 둔 DNS로 S3의 PDF로 접근하게 되면 [CSP(Content Security Policy)] 정책에 위반되어 데이터에 접근할수 없는 문제가 생겼다.
 
 ~~~
