--- a/_posts/2019-02-17-view-pdf.md
+++ b/_posts/2019-02-17-view-pdf.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "PDF 링크로 보여주기"
+title: "PDF 다운로드 및 미리보기 적용하기"
 author: Alex
 date: 2019-02-17
 categories: javascript ploblem
