카테고리 수정

--- a/_posts/2019-02-17-view-pdf.md
+++ b/_posts/2019-02-17-view-pdf.md
@@ -3,7 +3,7 @@ layout: post
 title: "PDF 다운로드 및 미리보기 적용하기"
 author: Alex
 date: 2019-02-17
-categories: javascript ploblem
+categories: javascript problem
 cover:  "/assets/instacode.png"
 comments: true
 ---
@@ -88,7 +88,7 @@ exports.handler = (event, context, callback) => {
 - <https://gist.github.com/tzmartin/1cf85dc3d975f94cfddc04bc0dd399be>
 
 ### 6. P.S.
-- cordova inappbrowser에서는 모바일dml 시스템 웹 브라우저으로 target 지정하는 `_system`을 지원한다.
+- cordova inappbrowser에서는 모바일의 시스템 웹 브라우저으로 target 지정하는 `_system`을 지원한다.
 
 [inappbrowser]: https://cordova.apache.org/docs/en/latest/reference/cordova-plugin-inappbrowser/index.html
 [Google Docs API]: https://jonathancamp.com/2018/07/31/embed-google-docs-document-within-your-web-page/
